testCases/semanticAnalyzerTestCases/correct/idStmtC.cs16
-- Carston Schilds, Feb 21st 2016

void main(void){
    x := y;
    x[1] := y;
    foo();
}