testCases/semanticAnalyzerTestCases/error/usingLibraryFunctions.cs16

/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/


int main(void){
    int x;
    x := readbool();
}

